Update test in website

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,13 @@ http {
         gzip_static on;
         location /static/ {
             index index.html index.php;
-
+            if ($request_uri ~ ^/(.*)\.html(\?|$)) {
+                return 302 /$1;
+            }
+            try_files $uri $uri.html $uri/ =404;
         }
+
+     
+
     }
 }
